--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <body>
     <nav class="navbar">
-      <h3 class="navbar__logo">Gemini</h3>
+      <h3 class="navbar__logo">UFUQ-AI Helper</h3>
       <button class="navbar__button" id="themeToggler">
         <i class="bx bx-sun"></i>
       </button>
@@ -123,8 +123,7 @@
         </div>
       </form>
       <p class="prompt__disclaim">
-        Gemini may display inaccurate info, including about people, so
-        double-check its responses.
+        powerd by NiuBabel
       </p>
     </section>
 
