--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <link rel="stylesheet" href="assets/highlight-js/styles/github-dark.css" />
     <link href="assets/boxicons-2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="assets/gemini.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/Logo.png" type="image/x-icon" />
     <script src="assets/highlight-js/highlight.min.js"></script>
     <script src="assets/marked/marked.min.js"></script>
-    <title>Google Gemini Clone</title>
+    <title>UFUQ-AI-HELPER</title>
   </head>
 
   <body>
@@ -122,6 +122,7 @@
           </button>
         </div>
       </form>
+      <div id="error-message" class="error-message" style="display: none;"></div>
       <p class="prompt__disclaim">
         powerd by NiuBabel
       </p>
